# crypto

./: .gitignore
.test/input/: small.txt  special chars in filename ~`!@#$%&()-_+{}',.txt
.test/input/dir1/: test1.txt
AltoQt/: AltoQt.pro  AltoQt.sln  AltoQt.vcxproj  AltoQt.vcxproj.filters
AltoQt/res/: AltoQt.qss
AltoQt/src/: Base64.cpp  Base64.hpp  Cipher.cpp  Cipher.hpp  Common.cpp  Common.hpp  File.hpp  FileSystemThr.cpp  FileSystemThr.hpp  MainWgt.cpp  MainWgt.hpp  MainWnd.cpp  MainWnd.hpp  ProgressWgt.cpp  ProgressWgt.hpp  RoundCornersMainWnd.cpp  RoundCornersMainWnd.hpp  ThreadManager.cpp  ThreadManager.hpp  TitleWgt.cpp  TitleWgt.hpp  main.cpp
AltoQt/src/Botan64/: botan_all.h
AltoQt/src/Q/: Q_App.cpp  Q_App.hpp  Q_LogWgt.cpp  Q_LogWgt.hpp  (+6 more)
Base64/repo/: CMakeLists.txt
Base64/repo/src/: Base64.cpp  Base64.hpp
Botan/: Botan.sln  Botan.vcxproj  Botan.vcxproj.filters
Botan/src/: Cipher.cpp  Cipher.hpp  main.cpp
ChaCha/repo/: CMakeLists.txt
ChaCha/repo/src/: ChaCha.cpp  ChaCha.hpp
CryptDll/: Crypt.cpp
CryptDll/VS2017/: CryptDll.sln  CryptDll.vcxproj  CryptDll.vcxproj.filters  CryptDll_tst.vcxproj  CryptDll_tst.vcxproj.filters
CryptDll/src/: Crypt.cpp  Crypt.hpp
CryptDll/tst/: CryptHelper.cpp  CryptHelper.hpp  DynLib.cpp  DynLib.hpp  File.hpp  main.cpp
CryptoPP_test/: .txt
CryptoPP_test/VS2017/: CryptoPP_test.sln  CryptoPP_test.vcxproj  CryptoPP_test.vcxproj.filters
CryptoPP_test/src/: Crypto.cpp  Crypto.hpp  main.cpp
EncryptFile_test/: EncryptFile_test.sln  EncryptFile_test.vcxproj
EncryptFile_test/src/: main.cpp
(+9 files in other folders)
